@@ -46,23 +46,8 @@ static int parse_proc_cmdline_item(const char *key, const char *value) {
 
         } else if (startswith(key, "quotacheck."))
                 log_warning("Invalid quotacheck parameter. Ignoring.");
-#ifdef HAVE_SYSV_COMPAT
-        else if (streq(key, "forcequotacheck") && !value) {
-                log_warning("Please use 'quotacheck.mode=force' rather than 'forcequotacheck' on the kernel command line.");
-                arg_force = true;
-        }
-#endif
 
         return 0;
-}
-
-static void test_files(void) {
-#ifdef HAVE_SYSV_COMPAT
-        if (access("/forcequotacheck", F_OK) >= 0) {
-                log_error("Please pass 'quotacheck.mode=force' on the kernel command line rather than creating /forcequotacheck on the root file system.");
-                arg_force = true;
-        }
-#endif
 }
 
 int main(int argc, char *argv[]) {
@@ -87,7 +72,6 @@ int main(int argc, char *argv[]) {
         umask(0022);
 
         parse_proc_cmdline(parse_proc_cmdline_item);
-        test_files();
 
         if (!arg_force) {
                 if (arg_skip)
